scripts/ingress-websocket.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: websocket-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: p1-emea.zzv.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sslh-nginx
            port:
              number: 80
